<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mdb.statwiz.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:id="@+id/normal_dist"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_page_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_page_welcome"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/normal_dist" />

    <RelativeLayout
        android:id="@+id/home_page_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_page_welcome">

        <TextView
            android:id="@+id/home_page_stat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_page_stat"
            android:textColor="@android:color/black"
            android:textSize="40dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/home_page_wiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/home_page_stat"
            android:layout_toRightOf="@id/home_page_stat"
            android:text="@string/home_page_wiz"
            android:textColor="@android:color/black"
            android:textSize="40dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/home_page_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/home_page_choose"
        android:textSize="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_page_name" />

    <TextView
        android:id="@+id/home_page_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_page_left"
        android:textSize="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_page_choose" />

</android.support.constraint.ConstraintLayout>
